--- a/index.html
+++ b/index.html
@@ -7,28 +7,29 @@
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
 	<body>
-		<h1>How much longer must I wait?</h1>
-		<div id="clockdiv">
-			<p>I have</p>
-			<div class="info">
-				<span class="days" id="day"></span>
-				<div class="smalltext">Days</div>
+		<div class="timer">
+			<h1>How much longer must I wait?</h1>
+			<div id="clockdiv">
+				<p>I have</p>
+				<div class="info">
+					<span class="days" id="day"></span>
+					<div class="smalltext">Days</div>
+				</div>
+				<div class="info">
+					<span class="hours" id="hour"></span>
+					<div class="smalltext">Hours</div>
+				</div>
+				<div class="info">
+					<span class="minutes" id="minute"></span>
+					<div class="smalltext">Minutes</div>
+				</div>
+				<div class="info">
+					<span class="seconds" id="second"></span>
+					<div class="smalltext">Seconds</div>
+				</div>
+				<p>until Animal Crossing New Horizons comes out.</p>
 			</div>
-			<div class="info">
-				<span class="hours" id="hour"></span>
-				<div class="smalltext">Hours</div>
-			</div>
-			<div class="info">
-				<span class="minutes" id="minute"></span>
-				<div class="smalltext">Minutes</div>
-			</div>
-			<div class="info">
-				<span class="seconds" id="second"></span>
-				<div class="smalltext">Seconds</div>
-			</div>
-			<p>until Animal Crossing New Horizons comes out.</p>
 		</div>
-
 		<p id="end"></p>
 	</body>
 	<script type="text/javascript" src="index.js"></script>
