Added new CSS changes and fixed timer to display correct time

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<span class="seconds" id="second"></span>
 					<div class="smalltext">Seconds</div>
 				</div>
-				<p>until Animal Crossing New Horizons comes out.</p>
+				<p>until I can play Animal Crossing New Horizons.</p>
 			</div>
 		</div>
 		<p id="end"></p>
