Finished adding alternate wording when countdown starts to count up

--- a/index.html
+++ b/index.html
@@ -6,32 +6,32 @@
 		<title>ACNH Counter</title>
 		<link rel="icon" href="/images/acicon.png" type="image/gif" />
 		<link rel="stylesheet" type="text/css" href="styles.css" />
+		<script src="jquery-3.4.1.min.js"></script>
 	</head>
 	<body>
-		<div class="timer">
-			<h1>How much longer must I wait?</h1>
+		<div class="timer" id="title">
 			<div id="clockdiv">
-				<p>I have</p>
-				<div class="info">
-					<span class="days" id="day"></span>
-					<div class="smalltext">Days</div>
+				<div id="sent1">
+					<div class="info">
+						<span class="days" id="day"></span>
+						<div class="smalltext">Days</div>
+					</div>
+					<div class="info">
+						<span class="hours" id="hour"></span>
+						<div class="smalltext">Hours</div>
+					</div>
+					<div class="info">
+						<span class="minutes" id="minute"></span>
+						<div class="smalltext">Minutes</div>
+					</div>
+					<div class="info">
+						<span class="seconds" id="second"></span>
+						<div class="smalltext">Seconds</div>
+					</div>
+					<div id="sent2"></div>
 				</div>
-				<div class="info">
-					<span class="hours" id="hour"></span>
-					<div class="smalltext">Hours</div>
-				</div>
-				<div class="info">
-					<span class="minutes" id="minute"></span>
-					<div class="smalltext">Minutes</div>
-				</div>
-				<div class="info">
-					<span class="seconds" id="second"></span>
-					<div class="smalltext">Seconds</div>
-				</div>
-				<p>until I can play Animal Crossing New Horizons.</p>
 			</div>
 		</div>
-		<p id="end"></p>
 	</body>
 	<script type="text/javascript" src="index.js"></script>
 </html>
