Added link to portfolio

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- If you're as excited as I am to play Animal Crossing New Horizons, feel free to reach out to me! -->
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -30,6 +31,7 @@
 					</div>
 					<div id="sent2"></div>
 				</div>
+				<a href="https://kyramellema.com/play">KyraMellema.com</a>
 			</div>
 		</div>
 	</body>
